# Dynamic-Neural-Network-Refinement

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .replit  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  best_model.pth  demo_cli.py  demo_enterprise.py  docker-compose.yml  environment.yml  mkdocs.yml  oryx-build-commands.txt  pyproject.toml  pyrightconfig.json  pytest.ini  replit.nix  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
AI_DREAM_LAB/: ConditionalGAN.py  README.md  advanced_network.py  consciousness_engine.py  federated_meta_learning.py  neuromorphic_sim.py  quantum_biological_network.py  recursive_improvement.py
agent_assets/: github_com_redx94_Dynamic-Neural-Network-Refinement.md  replit_com_recodxxx_Dynamic-Neural-Network-Refinement.md
archived_hallucinations/: quantum_routing.py
config/: README.md  benchmark_config.json  benchmark_config.yaml  config.yaml  distributed_config.yaml  eval_config.yaml  test_config.yaml  train_config.yaml  validation_config.yaml
crypto_utils/: secure_keys.py
data/: README.md
demos/: consciousness_demo.ipynb  quantum_network_demo.ipynb
deploy/: README.md
docs/: API_documentation.md  ARCHITECTURE.md  CI_CD.md  DEPLOYMENT.md  README.md  TESTING.md  advanced_features.md  api.md  best_practices.md  getting_started.md  index.md  license_information.md  new_features.md  quantum_biological_network.md  requirements.md  requirements.txt  roadmap.md
fixes/: final_flake8_fixes.md  flake8_fixes.md  flake8_full_fixes.md
grafana/: grafana.ini
monitoring/: anomaly_detection.py  real_time_telemetry.py
notebooks/: EDA.ipynb  Training.ipynb
prometheus/: README.md  alert.rules.yml  prometheus.yml
root/: README.md
scripts/: README.md  benchmark.py  deploy_model.py  evaluate.py  export_model.py  export_to_onnx.py  generate_synthetic.py  nas.py  preprocess_data.py  profile_inference.py  profile_training.py  prune.py  quantify.py  quantize.py  save_model.py  train.py  utils.py  validate_data.py  visualize.py
secure_execution/: TEE_manager.py
src/: ConditionalGAN.py  README.md  __init__.py  adaptive_thresholds.py  advanced_network.py  analyzer.py  app.py  consciousness_engine.py  dashboard.py  dataset_augmentation.py  enterprise_app.py  evolving_loss.py  federated_meta_learning.py  hybrid_thresholds.py  layers.py  meta_consciousness.py  meta_learning.py  metrics.py  mixture_of_experts.py  model.py  monitoring_and_visualization.py  nas.py  neural_architecture_search.py  neuromorphic_sim.py  per_sample_complexity.py  pretrained.py  quantum_biological_network.py  quantum_routing.py  recursive_improvement.py  rl_routing.py  scalability_optimizations.py  train.py  visualization.py
tests/: README.md  __init__.py  test_adaptive_thresholds.py  test_analyzer.py  test_data_loader.py  test_e2e.py  test_enterprise_advanced.py  test_federated_security.py  test_hybrid_thresholds.py  test_integration.py  test_mixture_of_experts.py  test_model.py  test_nas.py  test_neural_architecture_search.py  test_neural_network.py  test_per_sample_complexity.py  test_rl_routing.py  test_thresholds.py
utils/: README.md
(+139 files in other folders)
