
[tool.poetry]
name = "dynamic-neural-network"
version = "0.1.0"
description = "A Dynamic Neural Network with complexity-based routing"
authors = ["Your Name <you@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.1.0"
numpy = "^2.2.1"
pandas = "^2.1.0"
matplotlib = "^3.10.0"
scikit-learn = "^1.3.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
streamlit = "^1.28.0"
plotly = "^5.18.0"
pyyaml = "^6.0.1"
prometheus-client = "^0.21.1"
watchdog = "^6.0.0"
setuptools = "^75.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
